# BleAPI

./: .gitignore  CMakeLists.txt  README.md  arm.cmake  bootstrap.cmake  link.cmake  sl_workspace_settings.json
BleApp/: CMakeLists.txt  sl_settings.json
BleApp/src/: main.cpp  sl_config.h
porting/: hci_tr.c  wsf_cs.c  wsf_detoken.c  wsf_heap.c  wsf_nvm.c  wsf_timer.c  wsf_trace.c
porting/cfg/: cfg_stack.c  cfg_stack.h
wsf_target_StratifyOS/: hci_tr.c  wsf_assert.c  wsf_bufio.c  wsf_heap.c  wsf_os.c  wsf_trace.c
